--- a/7 Add Application UI/styles.css
+++ b/7 Add Application UI/styles.css
@@ -15,6 +15,11 @@ body {
   padding: 0.75rem;
 }
 
+#header-title {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 /* .esri-elevation-profile.esri-component.esri-widget--panel {
   margin-left: auto;
   margin-right: auto;
